--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,27 +11,28 @@
     <script src="lib/jasmine-3.5.0/jasmine-html.js"></script>
     <script src="lib/jasmine-3.5.0/boot.js"></script>
 
-<!--        <script src="spec/suiteSpec.js"></script>-->
-<!--        <script src="spec/testeSpec.js"></script>-->
-<!--        <script src="spec/expectSpec.js"></script>-->
-<!--        <script src="spec/toBeSpec.js"></script>-->
-<!--        <script src="spec/toEqualSpec.js"></script>-->
-<!--        <script src="spec/toMatchSpec.js"></script>-->
-<!--        <script src="spec/toBeDefinedSpec.js"></script>-->
-<!--        <script src="spec/toBeUndefinedSpec.js"></script>-->
-<!--        <script src="spec/toBeNullSpec.js"></script>-->
-<!--        <script src="spec/toBeTruthySpec.js"></script>-->
-<!--        <script src="spec/toBeFalsySpec.js"></script>-->
-<!--        <script src="spec/toContainSpec.js"></script>-->
-<!--        <script src="spec/toBeLessThanSpec.js"></script>-->
-<!--        <script src="spec/toBeGreaterThanSpec.js"></script>-->
-<!--        <script src="spec/toThrowErrorSpec.js"></script>-->
-<!--        <script src="spec/toThrowSpec.js"></script>-->
-<!--        <script src="spec/failSpec.js"></script>-->
-<!--        <script src="spec/beforeEachSpec.js"></script>-->
-<!--        <script src="spec/afterEachSpec.js"></script>-->
-<!--        <script src="spec/aninharSuitesSpec.js"></script>-->
-    <script src="spec/spySpec.js"></script>
+    <!--        <script src="spec/suiteSpec.js"></script>-->
+    <!--        <script src="spec/testeSpec.js"></script>-->
+    <!--        <script src="spec/expectSpec.js"></script>-->
+    <!--        <script src="spec/toBeSpec.js"></script>-->
+    <!--        <script src="spec/toEqualSpec.js"></script>-->
+    <!--        <script src="spec/toMatchSpec.js"></script>-->
+    <!--        <script src="spec/toBeDefinedSpec.js"></script>-->
+    <!--        <script src="spec/toBeUndefinedSpec.js"></script>-->
+    <!--        <script src="spec/toBeNullSpec.js"></script>-->
+    <!--        <script src="spec/toBeTruthySpec.js"></script>-->
+    <!--        <script src="spec/toBeFalsySpec.js"></script>-->
+    <!--        <script src="spec/toContainSpec.js"></script>-->
+    <!--        <script src="spec/toBeLessThanSpec.js"></script>-->
+    <!--        <script src="spec/toBeGreaterThanSpec.js"></script>-->
+    <!--        <script src="spec/toThrowErrorSpec.js"></script>-->
+    <!--        <script src="spec/toThrowSpec.js"></script>-->
+    <!--        <script src="spec/failSpec.js"></script>-->
+    <!--        <script src="spec/beforeEachSpec.js"></script>-->
+    <!--        <script src="spec/afterEachSpec.js"></script>-->
+    <!--        <script src="spec/aninharSuitesSpec.js"></script>-->
+    <!--    <script src="spec/spySpec.js"></script>-->
+    <script src="spec/meuMatcherSpec.js"></script>
 </head>
 
 <body>
